<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<parent>
		<artifactId>root</artifactId>
		<groupId>com.soffid.iam.console</groupId>
		<version>3.4.24</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<artifactId>iam-web</artifactId>
	<packaging>war</packaging>
	<name>Soffid Web</name>
	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/messages*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<filteringDeploymentDescriptors>
						true
					</filteringDeploymentDescriptors>
					<webResources>
						<resource>
							<directory>
								${project.basedir}/src/main/webapp/
							</directory>
							<filtering>true</filtering>
							<includes>
								<include>WEB-INF/**</include>
							</includes>
						</resource>
						<resource>
							<directory>
								${project.basedir}/src/main/resources
							</directory>
							<filtering>true</filtering>
							<includes>
								<include>WEB-INF/*</include>
							</includes>
						</resource>				
					</webResources>
                    <archive>
                            <manifest>
                                    <addClasspath>true</addClasspath>
                            </manifest>
                    </archive>
                    <attachClasses>true</attachClasses>
                    <classesClassifier>classes</classesClassifier>
				</configuration>
			</plugin>
		<plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-compiler-plugin</artifactId>
	      <configuration>
	        <source>1.8</source>
	        <target>1.8</target>
	      </configuration>
	    </plugin>						
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											build-helper-maven-plugin
										</artifactId>
										<versionRange>
											[1.7,)
										</versionRange>
										<goals>
											<goal>add-source</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencies>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>iam-common</artifactId>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>iam-core</artifactId>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-digester</groupId>
			<artifactId>commons-digester</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jdom</groupId>
			<artifactId>jdom</artifactId>
			<version>b9</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
	        <groupId>commons-fileupload</groupId>
	        <artifactId>commons-fileupload</artifactId>
	        <scope>compile</scope>
		</dependency>
		<dependency>
	        <groupId>commons-io</groupId>
	        <artifactId>commons-io</artifactId>
	        <version>2.11.0</version>
	    </dependency>
		<dependency>
			<groupId>com.soffid.zkib</groupId>
			<artifactId>zkiblaf</artifactId>
			<version>${zkiblaf.version}</version>
			<classifier>classes</classifier>
		</dependency>		
		<dependency>
			<groupId>org.zkoss.zk</groupId>
			<artifactId>zul</artifactId>
			<version>3.0.8-1</version>
		</dependency>
    <dependency>
      <groupId>org.zkoss.zk</groupId>
      <artifactId>zk</artifactId>
      <version>3.0.8-4</version>
    </dependency>
		<dependency>
			<groupId>org.zkoss.zk</groupId>
			<artifactId>zhtml</artifactId>
			<version>3.0.8</version>
		</dependency>
		<dependency>
			<groupId>org.zkoss.common</groupId>
			<artifactId>zcommon</artifactId>
			<version>3.0.8</version>
		</dependency>
		<dependency>
			<groupId>commons-el</groupId>
			<artifactId>commons-el</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.tomee</groupId>
			<artifactId>javaee-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-catalina</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.soffid.iam.console</groupId>
			<artifactId>iam-tomee</artifactId>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomee</groupId>
			<artifactId>openejb-core</artifactId>
			<scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.0.19</version>
        </dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.soffid.zkib</groupId>
			<artifactId>zkdb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.tomee</groupId>
			<artifactId>tomee-catalina</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.soffid.iam.console</groupId>
			<artifactId>iam-juli</artifactId>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>
